# Book_Notes

./: README.md  pyproject.toml
google_book_api/: book_finder.py  database.py  my_book_list.db
tests/: test_google_book_api.py
